--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link rel="icon" href="https://assets.dryicons.com/uploads/icon/svg/10949/d8c88ed1-0c75-4f62-a347-4da4d7f7bd77.svg">
   <meta charset="UTF-8">
-  <title>Hello World</title>
+  <title>GA Bakers</title>
   <link rel='stylesheet' href='/stylesheets/main.css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
